--- a/JavaEE/base64/decode-encode-service/pom.xml
+++ b/JavaEE/base64/decode-encode-service/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
         <dependency>
+    		<groupId>org.glassfish.jersey.test-framework.providers</groupId>
+    		<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+    		<version>2.22.2</version>
+		</dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.9</version>
