--- a/JavaEE/base64/decode-encode-service/pom.xml
+++ b/JavaEE/base64/decode-encode-service/pom.xml
@@ -36,6 +36,11 @@
     		<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
     		<version>2.22.2</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
