--- a/JavaEE/base64/decode-encode-service/pom.xml
+++ b/JavaEE/base64/decode-encode-service/pom.xml
@@ -7,7 +7,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>decode-encode-service</name>
+  <name>decode-encode-servic-4e</name>
  
     <dependencyManagement>
         <dependencies>
