--- a/spring/spittr/pom.xml
+++ b/spring/spittr/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.1.Final</version>
+        </dependency>
 
     </dependencies>
 
